--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </nav>
     <main>
         <h2>研究方向</h2>
-        <p>我们实验室致力于研究 A、B 和 C 领域的前沿问题，覆盖了计算机科学、人工智能、网络安全等方向。</p>
+        <p>我们实验室专注于 A、B 和 C 领域，研究计算机科学的前沿问题，涵盖人工智能、数据科学和网络安全等方向。</p>
+        <button>了解更多</button>
     </main>
     <footer>
         <p>&copy; 2024 研究组</p>
